--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -194,6 +194,54 @@ section.first {
     margin: 0 0 30px;
 }
 }
+#skills {
+    background: #aabbcc;
+}
+#skills .portfolio-item {
+    margin: 0 0 15px;
+    right: 0;
+}
+#skills .portfolio-item .portfolio-link {
+    display: block;
+    margin: 0 auto;
+    max-width: 400px;
+    position: relative;
+}
+#skills .portfolio-item .portfolio-link .caption {
+    background: none repeat scroll 0 0 rgba(24, 188, 156, 0.9);
+    height: 100%;
+    opacity: 0;
+    position: absolute;
+    transition: all 0.5s ease 0s;
+    width: 100%;
+}
+#skills .portfolio-item .portfolio-link .caption:hover {
+    opacity: 1;
+}
+#skills .portfolio-item .portfolio-link .caption .caption-content {
+    color: #fff;
+    font-size: 20px;
+    height: 20px;
+    margin-top: -12px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+}
+#skills .portfolio-item .portfolio-link .caption .caption-content i {
+    margin-top: -12px;
+}
+#skills .portfolio-item .portfolio-link .caption .caption-content h3, #portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+    margin: 0;
+}
+#skills * {
+    z-index: 2;
+}
+@media (min-width: 767px) {
+#skills .portfolio-item {
+    margin: 0 0 30px;
+}
+}
 .btn-outline {
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
     border: 2px solid #fff;
